# Atividade_Conversores_AD

./: Atividade_Conversores_AD.c  CMakeLists.txt  README.md
bibliotecas/: funcoes.c  funcoes.h  ssd1306.c  ssd1306.h
